# external_sorter

file_reader/: file_reader.h
file_with_lines/: CMakeLists.txt  file_with_lines.cpp  file_with_lines.h  line_iterator.cpp  line_iterator.h  main.cpp  sort.cpp  sort.h
line_view/: CMakeLists.txt  line_view.cpp  line_view.h  main.cpp
lines_manager/: line.h  lines_manager.h
random_access_file/: CMakeLists.txt  main.cpp  random_access_file.cpp  random_access_file.h
sorter/: CMakeLists.txt  main.cpp  sorter.cpp  sorter.h
temporary_file/: CMakeLists.txt  main.cpp  temporary_file.cpp  temporary_file.h
tests/generate_random_file/: CMakeLists.txt  generate_random_file.cpp  generate_random_file.h  main.cpp
